--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,14 +9,15 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager_notes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="55dp" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_gravity="bottom"
-        android:background="@null"
+        android:background="@color/white"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/pink"
         app:tabTextColor="#000000" />
