--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#c2c2c2"
+    android:orientation="vertical"
     tools:context=".ui.post.PostFragment">
 
-    <TextView
-        android:textSize="36sp"
-        android:gravity="center"
+    <include
+        android:id="@+id/container_no_post"
+        layout="@layout/layout_empty" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_user_post"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Post Fragment" />
-</FrameLayout>
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        tools:listitem="@layout/list_item_feeds" />
+
+</androidx.appcompat.widget.LinearLayoutCompat>
