--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:background="@color/white">
 
     <androidx.cardview.widget.CardView
@@ -41,7 +41,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:padding="16dp"
+        android:paddingBottom="16dp"
         android:text="@string/lorem"
         android:textColor="@android:color/darker_gray"
         android:textSize="14sp"
