--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -8,6 +8,21 @@
     android:orientation="vertical"
     tools:context=".ui.post.PostFragment">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/text_updates"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="32sp"
+        android:textColor="@color/black"
+        android:padding="16dp"
+        android:background="@color/white"
+        android:text="Your Post"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <include
         android:id="@+id/container_no_post"
         layout="@layout/layout_empty" />
