--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -12,27 +12,36 @@
         android:id="@+id/text_updates"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="32sp"
-        android:textColor="@color/black"
-        android:padding="16dp"
         android:background="@color/white"
+        android:padding="16dp"
         android:text="Your Post"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        android:textColor="@color/black"
+        android:textSize="32sp"
+        android:textStyle="bold" />
 
-    <include
-        android:id="@+id/container_no_post"
-        layout="@layout/layout_empty" />
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_user_post"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/pullRefresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        tools:listitem="@layout/list_item_feeds" />
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <include
+                android:id="@+id/container_no_post"
+                layout="@layout/layout_empty" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_user_post"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                tools:listitem="@layout/list_item_feeds" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
