--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -23,7 +23,6 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:tint="@color/white"
-
             app:srcCompat="@drawable/ic_social" />
     </androidx.cardview.widget.CardView>
 
@@ -62,6 +61,7 @@
         android:drawableTint="@color/white"
         android:text="Login Manager"
         android:textColor="@color/white"
+        android:backgroundTint="@color/design_default_color_primary_variant"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_signin" />
